feat(audit): add paginated history and filtered export